[package]
name = "block_encrypt"
version = "0.1.0"
authors = ["Tomas Ritter <tomas.ritter1@gmail.com>"]

[lib]
name = "block_encrypt"
path = "src/lib.rs"

[dependencies]
redox_syscall = "0.1"
redoxfs = "0.3"
hex-literal = "0.2.0"
block-modes = "0.3.3"
aes-soft = "0.3.3"
block-cipher-trait="0.6.2"
generic-array = "0.13.2"
typenum = "1.10.0"
#openssl = { version = "0.10", features = ["vendored"] }
