[package]
name = "block_encrypt"
version = "0.1.0"
authors = ["Tomas Ritter <tomas.ritter1@gmail.com>"]

[lib]
name = "block_encrypt"
path = "src/lib.rs"

[dependencies]
redox_syscall = "0.1"
redoxfs = "0.3"
hex-literal = "0.2.0"
block-modes = "0.3.3"
aes-soft = "0.3.3"
block-cipher-trait="0.6.2"
generic-array = "0.12.3"
typenum = "1.10.0"
#openssl-sys = { version = "0.9", features = ["vendored"] }
#openssl = { version = "0.10", features = ["vendored"] }
byteorder = { version = "1.3.2", features = ["i128"] }
blake2 = "0.8.0"
sha2 = "0.8.0"
sha3 = "0.8.2"
groestl = "0.8.0"
digest = "0.8.1"